Move all hardcoded code to single class